--- a/GraphQL/package.json
+++ b/GraphQL/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "graphql",
+  "version": "1.0.0",
+  "description": "",
+  "main": "apollo_server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "graphql-yoga": "^2.11.2",
-    "node-fetch": "^3.2.6"
+    "apollo-server": "^3.9.0"
   }
 }
